test/negative/nul_bus_size.net
INPUT
OUTPUT b
VAR b: 0
IN
b = 0
